force-app/main/default/objects/Header_Sheet__c.object
<CustomObject>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>Field to know when the Header Sheet was Approved or Rejected</description>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>EQCC Header</label>
        <referenceTo>EQCC_Header__c</referenceTo>
        <relationshipLabel>Header Sheets</relationshipLabel>
        <relationshipName>Header_Sheets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_by_Step__c</fullName>
        <defaultValue>&apos;{}&apos;</defaultValue>
        <label>Percentage by Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Datetime__c</fullName>
        <description>This is used to show the Date and Time of a form being rejected (Approval History)</description>
        <label>Rejection Datetime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RequesterId__c</fullName>
        <description>Stores the Requester Id, needed to avoid queries when sending bell alerts</description>
        <label>RequesterId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <label>Requester</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sheet__c</fullName>
        <label>EQCC Checked Sheet</label>
        <referenceTo>EQCC_Checked_Sheet__c</referenceTo>
        <relationshipLabel>Header Sheets</relationshipLabel>
        <relationshipName>Header_Sheets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&apos;Draft&apos;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending for Approval</fullName>
                </value>
                <value>
                    <fullName>Needs Revision</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step_Percentage__c</fullName>
        <label>Step Percentage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF(!ISNULL(Header__r.Order__c) &amp;&amp; ISPICKVAL(Header__r.Order__r.Order_Type__c, &quot;CM01&quot;), &quot;CM&quot;, 
IF(!ISNULL(Header__r.Order__c) &amp;&amp; ISPICKVAL(Header__r.Order__r.Order_Type__c, &quot;PM01&quot;), &quot;PM&quot;,
IF(!ISNULL(Header__r.Order__c) &amp;&amp; ISPICKVAL(Header__r.Order__r.Order_Type__c, &quot;SH01&quot;), &quot;SH&quot;, 
IF(!ISNULL(Header__r.Notification__c), Text(Header__r.Order__r.Order_Type__c), &quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isManuallyCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manually Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPolluted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked when the status of the Header Sheet changes. It means that someone has started working on the Header Sheet. It prevents the Header Sheet to be removed in case of being checked.</description>
        <label>isPolluted</label>
        <type>Checkbox</type>
    </fields>
    <label>Header Sheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Header__c</columns>
        <columns>IsDeleted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Header__c</field>
            <operation>equals</operation>
            <value>EQCCH-705604</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HS-{0000}</displayFormat>
        <label>Header Sheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>